add second section

--- a/0_Introduction/0_Exercises.ipynb
+++ b/0_Introduction/0_Exercises.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "529d91ae",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Exercise 00\n",
     "Write a bit of code that prints _Introduction to Programming_ to the console and execute the cell"
